add more samples

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,3 +19,6 @@ include_directories(./include/)
 #include_directories( ${OPENGL_INCLUDE_DIR}  ${GLUT_INCLUDE_DIR})
 add_definitions(-DGL_SILENCE_DEPRECATION)
 add_subdirectory(./01_triangle)
+add_subdirectory(./02_circle)
+add_subdirectory(./03_star)
+add_subdirectory(./04_sin_cos)
