--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,3 +23,4 @@ add_subdirectory(./02_circle)
 add_subdirectory(./03_star)
 add_subdirectory(./04_sin_cos)
 add_subdirectory(./05_polygon)
+add_subdirectory(./06_vertex_color)
