--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,3 +24,4 @@ add_subdirectory(./03_star)
 add_subdirectory(./04_sin_cos)
 add_subdirectory(./05_polygon)
 add_subdirectory(./06_vertex_color)
+add_subdirectory(./07_model_view)
