support linux compile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,21 @@
 cmake_minimum_required(VERSION 2.8)
 project(StudyOpenGL)
 IF(APPLE)
-   #INCLUDE_DIRECTORIES ( /System/Library/Frameworks )
-   FIND_LIBRARY(COCOA_LIBRARY Cocoa)
-   FIND_LIBRARY(GLUT_LIBRARY GLUT )
-   FIND_LIBRARY(OpenGL_LIBRARY OpenGL )
-   FIND_LIBRARY(GLEW_LIBRARY OpenGL )
-   MARK_AS_ADVANCED (COCOA_LIBRARY GLUT_LIBRARY OpenGL_LIBRARY GLEW_LIBRARY)
-   SET(EXTRA_LIBS ${COCOA_LIBRARY} ${GLUT_LIBRARY} ${OpenGL_LIBRARY} ${GLEW_LIBRARY})
+    #INCLUDE_DIRECTORIES ( /System/Library/Frameworks )
+    FIND_LIBRARY(COCOA_LIBRARY Cocoa)
+    FIND_LIBRARY(GLUT_LIBRARY GLUT )
+    FIND_LIBRARY(OpenGL_LIBRARY OpenGL )
+    FIND_LIBRARY(GLEW_LIBRARY OpenGL )
+    MARK_AS_ADVANCED (COCOA_LIBRARY GLUT_LIBRARY OpenGL_LIBRARY GLEW_LIBRARY)
+    SET(EXTRA_LIBS ${COCOA_LIBRARY} ${GLUT_LIBRARY} ${OpenGL_LIBRARY} ${GLEW_LIBRARY})
 ENDIF (APPLE)
+IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
+    FIND_PACKAGE(GLUT REQUIRED)
+    FIND_PACKAGE(GLU REQUIRED)
+    FIND_LIBRARY(OpenGL_LIBRARY OpenGL )
+    FIND_LIBRARY(GLEW_LIBRARY OpenGL )
+    SET(EXTRA_LIBS ${GLU_LIBRARY} ${GLUT_LIBRARY} ${OpenGL_LIBRARY} ${GLEW_LIBRARY} m)
+ENDIF(CMAKE_SYSTEM_NAME MATCHES "Linux")
 
 file(GLOB PROJECT_SRCS ./src/main.c)
 include_directories(./include/)
