--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,3 +32,4 @@ add_subdirectory(./04_sin_cos)
 add_subdirectory(./05_polygon)
 add_subdirectory(./06_vertex_color)
 add_subdirectory(./07_model_view)
+add_subdirectory(./08_solar_system)
