--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,3 +33,4 @@ add_subdirectory(./05_polygon)
 add_subdirectory(./06_vertex_color)
 add_subdirectory(./07_model_view)
 add_subdirectory(./08_solar_system)
+add_subdirectory(./09_blend)
