--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,3 +34,4 @@ add_subdirectory(./06_vertex_color)
 add_subdirectory(./07_model_view)
 add_subdirectory(./08_solar_system)
 add_subdirectory(./09_blend)
+add_subdirectory(./10_lighting_model)
