--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,3 +35,4 @@ add_subdirectory(./07_model_view)
 add_subdirectory(./08_solar_system)
 add_subdirectory(./09_blend)
 add_subdirectory(./10_lighting_model)
+add_subdirectory(./11_texture)
