--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,3 +36,4 @@ add_subdirectory(./08_solar_system)
 add_subdirectory(./09_blend)
 add_subdirectory(./10_lighting_model)
 add_subdirectory(./11_texture)
+add_subdirectory(./12_world_map)
