--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,18 +6,25 @@ IF(APPLE)
     FIND_LIBRARY(GLUT_LIBRARY GLUT )
     FIND_LIBRARY(OpenGL_LIBRARY OpenGL )
     FIND_LIBRARY(GLEW_LIBRARY OpenGL )
+    FIND_PACKAGE(GLFW3 REQUIRED)
     MARK_AS_ADVANCED (COCOA_LIBRARY GLUT_LIBRARY OpenGL_LIBRARY GLEW_LIBRARY)
-    SET(EXTRA_LIBS ${COCOA_LIBRARY} ${GLUT_LIBRARY} ${OpenGL_LIBRARY} ${GLEW_LIBRARY})
+    #include_directories(${GLFW3_INCLUDE_DIRS})
+    include_directories(/usr/local/Cellar/glfw/3.2.1/include)
+    link_directories(/usr/local/Cellar/glfw/3.2.1/lib)
+    SET(EXTRA_LIBS ${COCOA_LIBRARY} ${GLUT_LIBRARY} ${OpenGL_LIBRARY} ${GLEW_LIBRARY} glfw)
 ENDIF (APPLE)
 IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
     FIND_PACKAGE(GLUT REQUIRED)
     FIND_PACKAGE(GLU REQUIRED)
     FIND_LIBRARY(OpenGL_LIBRARY OpenGL )
     FIND_LIBRARY(GLEW_LIBRARY OpenGL )
-    SET(EXTRA_LIBS ${GLU_LIBRARY} ${GLUT_LIBRARY} ${OpenGL_LIBRARY} ${GLEW_LIBRARY} m)
+    FIND_PACKAGE(GLFW3 REQUIRED)
+    include_directories(${GLFW3_INCLUDE_DIRS})
+    SET(EXTRA_LIBS ${GLU_LIBRARY} ${GLUT_LIBRARY} ${OpenGL_LIBRARY} ${GLEW_LIBRARY} ${GLFW3_LIBRARIES} m)
 ENDIF(CMAKE_SYSTEM_NAME MATCHES "Linux")
 
-file(GLOB PROJECT_SRCS ./src/main.c)
+file(GLOB PROJECT_SRCS ./src/legacy_main.c)
+file(GLOB GLFW_PROJECT_SRCS ./src/glfw_main.cpp)
 include_directories(./include/)
 
 #find_package(OpenGL REQUIRED)
@@ -37,3 +44,4 @@ add_subdirectory(./09_blend)
 add_subdirectory(./10_lighting_model)
 add_subdirectory(./11_texture)
 add_subdirectory(./12_world_map)
+add_subdirectory(./13_glfw_hello)
