--- a/13_glfw_hello/CMakeLists.txt
+++ b/13_glfw_hello/CMakeLists.txt
@@ -1,4 +1,5 @@
 project(13_glfw_hello)
+set(CMAKE_CXX_STANDARD 11)
 set(GLFW_PROJECT_SRCS ${GLFW_PROJECT_SRCS} ./glfw_hello.cpp)
 add_executable(${PROJECT_NAME} ${GLFW_PROJECT_SRCS})
 target_link_libraries(${PROJECT_NAME} ${EXTRA_LIBS})
