--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 project(StudyOpenGL)
+set(CMAKE_CXX_STANDARD 11)
 IF(APPLE)
     #INCLUDE_DIRECTORIES ( /System/Library/Frameworks )
     FIND_LIBRARY(COCOA_LIBRARY Cocoa)
@@ -23,9 +24,8 @@ IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
     SET(EXTRA_LIBS ${GLU_LIBRARY} ${GLUT_LIBRARY} ${OpenGL_LIBRARY} ${GLEW_LIBRARY} ${GLFW3_LIBRARIES} m)
 ENDIF(CMAKE_SYSTEM_NAME MATCHES "Linux")
 
-file(GLOB PROJECT_SRCS ./src/legacy_main.c)
-file(GLOB GLFW_PROJECT_SRCS ./src/glfw_main.cpp)
-include_directories(./include/)
+file(GLOB PROJECT_SRCS ./common/*.cpp)
+include_directories(./common/)
 
 #find_package(OpenGL REQUIRED)
 #find_package(GLUT REQUIRED)
@@ -44,4 +44,3 @@ add_subdirectory(./09_blend)
 add_subdirectory(./10_lighting_model)
 add_subdirectory(./11_texture)
 add_subdirectory(./12_world_map)
-add_subdirectory(./13_glfw_hello)
