--- a/09_blend/CMakeLists.txt
+++ b/09_blend/CMakeLists.txt
@@ -1,5 +1,5 @@
 project(09_blend)
-set(PROJECT_SRCS ${PROJECT_SRCS} ./blend.c)
+set(PROJECT_SRCS ${PROJECT_SRCS} ./blend.cpp)
 add_executable(${PROJECT_NAME} ${PROJECT_SRCS})
 #target_link_libraries(01_triangle ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${COCOA_LIB})
 target_link_libraries(${PROJECT_NAME} ${EXTRA_LIBS})
