--- a/10_lighting_model/CMakeLists.txt
+++ b/10_lighting_model/CMakeLists.txt
@@ -1,4 +1,4 @@
 project(10_lighting_model)
-set(PROJECT_SRCS ${PROJECT_SRCS} ./lighting_model.c)
+set(PROJECT_SRCS ${PROJECT_SRCS} ./lighting_model.cpp)
 add_executable(${PROJECT_NAME} ${PROJECT_SRCS})
 target_link_libraries(${PROJECT_NAME} ${EXTRA_LIBS})
