--- a/12_world_map/CMakeLists.txt
+++ b/12_world_map/CMakeLists.txt
@@ -1,4 +1,4 @@
 project(12_world_map)
-set(PROJECT_SRCS ${PROJECT_SRCS} ./world_map.c)
+set(PROJECT_SRCS ${PROJECT_SRCS} ./world_map.cpp)
 add_executable(${PROJECT_NAME} ${PROJECT_SRCS})
 target_link_libraries(${PROJECT_NAME} ${EXTRA_LIBS})
