--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,3 +44,4 @@ add_subdirectory(./09_blend)
 add_subdirectory(./10_lighting_model)
 add_subdirectory(./11_texture)
 add_subdirectory(./12_world_map)
+add_subdirectory(./13_programing_pipeline)
