modified cmake file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,17 +2,13 @@ cmake_minimum_required(VERSION 2.8)
 project(StudyOpenGL)
 set(CMAKE_CXX_STANDARD 11)
 IF(APPLE)
-    #INCLUDE_DIRECTORIES ( /System/Library/Frameworks )
-    FIND_LIBRARY(COCOA_LIBRARY Cocoa)
+    find_package(PkgConfig REQUIRED)
     FIND_LIBRARY(GLUT_LIBRARY GLUT )
     FIND_LIBRARY(OpenGL_LIBRARY OpenGL )
-    FIND_LIBRARY(GLEW_LIBRARY OpenGL )
-    FIND_PACKAGE(GLFW3 REQUIRED)
-    MARK_AS_ADVANCED (COCOA_LIBRARY GLUT_LIBRARY OpenGL_LIBRARY GLEW_LIBRARY)
-    #include_directories(${GLFW3_INCLUDE_DIRS})
-    include_directories(/usr/local/Cellar/glfw/3.2.1/include)
-    link_directories(/usr/local/Cellar/glfw/3.2.1/lib)
-    SET(EXTRA_LIBS ${COCOA_LIBRARY} ${GLUT_LIBRARY} ${OpenGL_LIBRARY} ${GLEW_LIBRARY} glfw)
+    pkg_search_module(GLFW REQUIRED glfw3)
+    include_directories(${GLFW_INCLUDE_DIRS})
+    link_directories(${GLFW_LIBRARY_DIRS})
+    SET(EXTRA_LIBS ${GLUT_LIBRARY} ${OpenGL_LIBRARY} ${GLFW_LIBRARIES})
 ENDIF (APPLE)
 IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
     FIND_PACKAGE(GLUT REQUIRED)
@@ -27,10 +23,6 @@ ENDIF(CMAKE_SYSTEM_NAME MATCHES "Linux")
 file(GLOB PROJECT_SRCS ./common/*.cpp)
 include_directories(./common/)
 
-#find_package(OpenGL REQUIRED)
-#find_package(GLUT REQUIRED)
-#find_library(COCOA_LIB cocoa)
-#include_directories( ${OPENGL_INCLUDE_DIR}  ${GLUT_INCLUDE_DIR})
 add_definitions(-DGL_SILENCE_DEPRECATION)
 add_subdirectory(./01_triangle)
 add_subdirectory(./02_circle)
