repaired linux opengl compile bug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,13 +11,13 @@ IF(APPLE)
     SET(EXTRA_LIBS ${GLUT_LIBRARY} ${OpenGL_LIBRARY} ${GLFW_LIBRARIES})
 ENDIF (APPLE)
 IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
+    find_package(PkgConfig REQUIRED)
     FIND_PACKAGE(GLUT REQUIRED)
-    FIND_PACKAGE(GLU REQUIRED)
-    FIND_LIBRARY(OpenGL_LIBRARY OpenGL )
-    FIND_LIBRARY(GLEW_LIBRARY OpenGL )
-    FIND_PACKAGE(GLFW3 REQUIRED)
+    pkg_search_module(GLFW REQUIRED glfw3)
+    pkg_search_module(GLU REQUIRED glu)
+    pkg_search_module(OPENGL REQUIRED opengl)
     include_directories(${GLFW3_INCLUDE_DIRS})
-    SET(EXTRA_LIBS ${GLU_LIBRARY} ${GLUT_LIBRARY} ${OpenGL_LIBRARY} ${GLEW_LIBRARY} ${GLFW3_LIBRARIES} m)
+    SET(EXTRA_LIBS ${GLU_LIBRARIES} ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES} ${GLFW_LIBRARIES} m)
 ENDIF(CMAKE_SYSTEM_NAME MATCHES "Linux")
 
 file(GLOB PROJECT_SRCS ./common/*.cpp)
