--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,3 +37,4 @@ add_subdirectory(./10_lighting_model)
 add_subdirectory(./11_texture)
 add_subdirectory(./12_world_map)
 add_subdirectory(./13_programing_pipeline)
+add_subdirectory(./14_glsl_vertex_color)
