--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
     FIND_PACKAGE(GLUT REQUIRED)
     pkg_search_module(GLFW REQUIRED glfw3)
     pkg_search_module(GLU REQUIRED glu)
-    pkg_search_module(OPENGL REQUIRED opengl)
+    pkg_search_module(OPENGL REQUIRED gl)
     include_directories(${GLFW3_INCLUDE_DIRS})
     SET(EXTRA_LIBS ${GLU_LIBRARIES} ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES} ${GLFW_LIBRARIES} m)
 ENDIF(CMAKE_SYSTEM_NAME MATCHES "Linux")
