--- a/16_glsl_vao/CMakeLists.txt
+++ b/16_glsl_vao/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(16_glsl_var)
+project(16_glsl_vao)
 set(CMAKE_CXX_STANDARD 11)
 set(PROJECT_SRCS ${PROJECT_SRCS} ./glsl_vao.cpp)
 add_executable(${PROJECT_NAME} ${PROJECT_SRCS})
