--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,16 @@
 cmake_minimum_required(VERSION 2.8)
 project(StudyOpenGL)
 set(CMAKE_CXX_STANDARD 11)
+add_definitions(-g)
 IF(APPLE)
     find_package(PkgConfig REQUIRED)
     FIND_LIBRARY(GLUT_LIBRARY GLUT )
     FIND_LIBRARY(OpenGL_LIBRARY OpenGL )
     pkg_search_module(GLFW REQUIRED glfw3)
-    include_directories(${GLFW_INCLUDE_DIRS})
-    link_directories(${GLFW_LIBRARY_DIRS})
-    SET(EXTRA_LIBS ${GLUT_LIBRARY} ${OpenGL_LIBRARY} ${GLFW_LIBRARIES})
+    pkg_search_module(GLEW REQUIRED glew)
+    include_directories(${GLFW_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS})
+    link_directories(${GLFW_LIBRARY_DIRS} ${GLEW_LIBRARY_DIRS})
+    SET(EXTRA_LIBS ${GLUT_LIBRARY} ${OpenGL_LIBRARY} ${GLFW_LIBRARIES} ${GLEW_LIBRARIES})
 ENDIF (APPLE)
 IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
     find_package(PkgConfig REQUIRED)
