--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,24 +2,25 @@ cmake_minimum_required(VERSION 2.8)
 project(StudyOpenGL)
 set(CMAKE_CXX_STANDARD 11)
 add_definitions(-g)
+
+find_package(PkgConfig REQUIRED)
+pkg_search_module(GLFW REQUIRED glfw3)
+pkg_search_module(GLEW REQUIRED glew)
+include_directories(${GLFW_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS})
+link_directories(${GLFW_LIBRARY_DIRS} ${GLEW_LIBRARY_DIRS})
+SET(EXTRA_LIBS ${GLFW_LIBRARIES} ${GLEW_LIBRARIES})
+
 IF(APPLE)
-    find_package(PkgConfig REQUIRED)
     FIND_LIBRARY(GLUT_LIBRARY GLUT )
     FIND_LIBRARY(OpenGL_LIBRARY OpenGL )
-    pkg_search_module(GLFW REQUIRED glfw3)
-    pkg_search_module(GLEW REQUIRED glew)
-    include_directories(${GLFW_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS})
-    link_directories(${GLFW_LIBRARY_DIRS} ${GLEW_LIBRARY_DIRS})
-    SET(EXTRA_LIBS ${GLUT_LIBRARY} ${OpenGL_LIBRARY} ${GLFW_LIBRARIES} ${GLEW_LIBRARIES})
+    SET(EXTRA_LIBS ${EXTRA_LIBS} ${GLUT_LIBRARY} ${OpenGL_LIBRARY})
 ENDIF (APPLE)
+
 IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
-    find_package(PkgConfig REQUIRED)
     FIND_PACKAGE(GLUT REQUIRED)
-    pkg_search_module(GLFW REQUIRED glfw3)
     pkg_search_module(GLU REQUIRED glu)
     pkg_search_module(OPENGL REQUIRED gl)
-    include_directories(${GLFW3_INCLUDE_DIRS})
-    SET(EXTRA_LIBS ${GLU_LIBRARIES} ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES} ${GLFW_LIBRARIES} m)
+    SET(EXTRA_LIBS ${EXTRA_LIBS} ${GLU_LIBRARIES} ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES} m)
 ENDIF(CMAKE_SYSTEM_NAME MATCHES "Linux")
 
 file(GLOB PROJECT_SRCS ./common/*.cpp)
