rename some files

--- a/04_sin_cos/CMakeLists.txt
+++ b/04_sin_cos/CMakeLists.txt
@@ -1,5 +1,5 @@
 project(04_sin_cos)
-set(PROJECT_SRCS ${PROJECT_SRCS} ./sin_cos.cpp)
+set(PROJECT_SRCS ${PROJECT_SRCS} ./main.cpp)
 add_executable(${PROJECT_NAME} ${PROJECT_SRCS})
 #target_link_libraries(01_triangle ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${COCOA_LIB})
 target_link_libraries(${PROJECT_NAME} ${EXTRA_LIBS})
