--- a/08_solar_system/CMakeLists.txt
+++ b/08_solar_system/CMakeLists.txt
@@ -1,4 +1,4 @@
 project(08_solar_system)
-set(PROJECT_SRCS ${PROJECT_SRCS} ./solar_system.cpp)
+set(PROJECT_SRCS ${PROJECT_SRCS} ./main.cpp)
 add_executable(${PROJECT_NAME} ${PROJECT_SRCS})
 target_link_libraries(${PROJECT_NAME} ${EXTRA_LIBS})
