--- a/11_texture/CMakeLists.txt
+++ b/11_texture/CMakeLists.txt
@@ -1,4 +1,4 @@
 project(11_texture)
-set(PROJECT_SRCS ${PROJECT_SRCS} ./texture.cpp)
+set(PROJECT_SRCS ${PROJECT_SRCS} ./main.cpp)
 add_executable(${PROJECT_NAME} ${PROJECT_SRCS})
 target_link_libraries(${PROJECT_NAME} ${EXTRA_LIBS})
