--- a/14_glsl_vertex_color/CMakeLists.txt
+++ b/14_glsl_vertex_color/CMakeLists.txt
@@ -1,5 +1,5 @@
 project(14_glsl_vertex_color)
 set(CMAKE_CXX_STANDARD 11)
-set(PROJECT_SRCS ${PROJECT_SRCS} ./glsl_vertex_color.cpp)
+set(PROJECT_SRCS ${PROJECT_SRCS} ./main.cpp)
 add_executable(${PROJECT_NAME} ${PROJECT_SRCS})
 target_link_libraries(${PROJECT_NAME} ${EXTRA_LIBS})
