--- a/16_glsl_vao/CMakeLists.txt
+++ b/16_glsl_vao/CMakeLists.txt
@@ -1,5 +1,5 @@
 project(16_glsl_vao)
 set(CMAKE_CXX_STANDARD 11)
-set(PROJECT_SRCS ${PROJECT_SRCS} ./glsl_vao.cpp)
+set(PROJECT_SRCS ${PROJECT_SRCS} ./main.cpp)
 add_executable(${PROJECT_NAME} ${PROJECT_SRCS})
 target_link_libraries(${PROJECT_NAME} ${EXTRA_LIBS})
