--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,3 +43,4 @@ add_subdirectory(./13_programing_pipeline)
 add_subdirectory(./14_glsl_vertex_color)
 add_subdirectory(./15_glsl_texture)
 add_subdirectory(./16_glsl_vao)
+add_subdirectory(./17_glsl_ebo)
