--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,3 +44,4 @@ add_subdirectory(./14_glsl_vertex_color)
 add_subdirectory(./15_glsl_texture)
 add_subdirectory(./16_glsl_vao)
 add_subdirectory(./17_glsl_ebo)
+add_subdirectory(./18_glsl_ebo_uv)
