modify project structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,22 +44,4 @@ SET(EXTRA_LIBS ${EXTRA_LIBS} sframe)
 add_subdirectory(./3rdparty/assimp)
 
 add_definitions(-DGL_SILENCE_DEPRECATION -DSTB_IMAGE_IMPLEMENTATION)
-add_subdirectory(./01_triangle)
-add_subdirectory(./02_circle)
-add_subdirectory(./03_star)
-add_subdirectory(./04_sin_cos)
-add_subdirectory(./05_polygon)
-add_subdirectory(./06_vertex_color)
-add_subdirectory(./07_model_view)
-add_subdirectory(./08_solar_system)
-add_subdirectory(./09_blend)
-add_subdirectory(./10_lighting_model)
-add_subdirectory(./11_texture)
-add_subdirectory(./12_world_map)
-add_subdirectory(./13_programing_pipeline)
-add_subdirectory(./14_glsl_vertex_color)
-add_subdirectory(./15_glsl_texture)
-add_subdirectory(./16_glsl_vao)
-add_subdirectory(./17_glsl_ebo)
-add_subdirectory(./18_glsl_ebo_uv)
-add_subdirectory(./19_fbx_cube)
+add_subdirectory(./samples/)
